<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsa_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JoinActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/White"
        android:text="Lütfen kayıt için gerekli alanları doldurunuz."
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:textColor="@color/White"
        android:layout_marginTop="20dp"
        android:text="@string/phoneNumber" />

    <EditText
        android:id="@+id/phoneNumberTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumberTextView"
        android:layout_alignParentRight="true"
        android:textColor="@color/White"
        android:layout_below="@+id/phoneNumberTextView"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumberTextBox"
        android:layout_below="@+id/phoneNumberTextBox"
        android:layout_marginTop="18dp"
        android:textColor="@color/White"
        android:text="@string/eposta" />

    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTextView"
        android:layout_alignParentRight="true"
        android:textColor="@color/White"
        android:layout_below="@+id/emailTextView"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTextBox"
        android:layout_centerVertical="true"
        android:textColor="@color/White"
        android:text="@string/prompt_password" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:textColor="@color/White"
        android:ems="10"
        android:inputType="textPassword" >

    </EditText>

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTextBox"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:layout_marginTop="59dp"
        android:text="@string/ok" />

</RelativeLayout>
